<resources>
    <string name="app_name">B07ProjectApp</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_admin_login">activity_admin_login</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="enter_name">Enter name</string>
    <string name="enter_participant_limit">Enter Participant Limit</string>
    <string name="enter_date_of_event_eg_day_month_year">Enter date of event(eg. day/month/year)</string>
    <string name="enter_time_of_event_eg_1_00">Enter time of event(eg:1:00)</string>
    <string name="event_description_eg_this_event_is_for_computer_science_students">Event Description(eg: This event is for computer science students</string>
    <string name="schedule_event">Schedule Event</string>
    <string name="name">Name</string>
    <string name="participant_limit">Participant Limit</string>
    <string name="date">Date</string>
    <string name="date_header">Date</string>

    <string name="time_of_event">Time of event</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="event_button">EVENT</string>
    <string name="text_title">Text Title</string>
    <string name="description">Description</string>
    <string name="join_event">Join Event</string>
    <string name="comments">Comments</string>
    <string name="next_event">Next Event</string>
    <string name="textview">TextView</string>
    <string name="rating">Rating</string>
    <string name="admin_dashboard">Admin Dashboard</string>
    <string name="view_events">View Events</string>
    <string name="add_new_event">Add New Event</string>
    <string name="create_an_event">Create an Event</string>
    <string name="event_name">Event Name</string>
    <string name="add">add</string>
    <string name="add_a_description">Add a description</string>
    <string name="go_back">Go Back</string>
    <string name="leave_a_rating_1_5">Leave a Rating (1–5)</string>
    <string name="submit_comment">Submit Comment</string>
    <string name="enter_your_comment">Enter your Comment</string>
    <string name="submit_a_comment">Submit a Comment</string>
    <string name="title_activity_student_events">StudentEvents</string>
    <string name="adminDashboard">Admin Dashboard</string>
    <string name="view_students_complaints">View Students\' Complaints</string>
    <string name="submit_a_complaint">Submit a Complaint</string>
    <string name="student_dashboard">Student Dashboard</string>

    <string name="notify_ann_app_name">student_notification</string>
    <string name="notify_ann_notification">Notification</string>
    <string name="notify_ann_title">title</string>
    <string name="notify_ann_date">date</string>
    <string name="notify_ann_sender">sender</string>
    <string name="notify_ann_content">content</string>
</resources>
