<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/input_limit"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".adminop.post_event">

    <EditText
        android:id="@+id/inputlimit"
        android:layout_width="133dp"
        android:layout_height="53dp"
        android:height="48dp"
        android:inputType="number"
        android:background="@drawable/edittext_border"
        android:hint="@string/enter_participant_limit"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/input_time"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.353"
        app:layout_constraintStart_toEndOf="@+id/inputeventname"
        app:layout_constraintTop_toBottomOf="@+id/title_page"
        app:layout_constraintVertical_bias="0.642" />

    <EditText
        android:id="@+id/inputeventname"
        android:layout_width="150dp"
        android:layout_height="56dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="64dp"
        android:height="48dp"
        android:background="@drawable/edittext_border"
        android:hint="@string/enter_name"
        android:inputType="text"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/input_date"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_page"
        app:layout_constraintVertical_bias="0.244" />

    <EditText
        android:id="@+id/input_date"
        android:layout_width="155dp"
        android:layout_height="77dp"
        android:height="48dp"
        android:background="@drawable/edittext_border"
        android:hint="dd/mm/yyyy"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/inputdescription"
        app:layout_constraintEnd_toStartOf="@+id/input_time"
        app:layout_constraintHorizontal_bias="0.617"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_page"
        app:layout_constraintVertical_bias="0.725" />

    <EditText
        android:id="@+id/input_time"
        android:layout_width="154dp"
        android:layout_height="70dp"
        android:layout_marginTop="168dp"
        android:height="48dp"
        android:background="@drawable/edittext_border"
        android:hint="@string/enter_time_of_event_eg_1_00"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.832"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_page" />

    <EditText
        android:id="@+id/inputdescription"
        android:layout_width="360dp"
        android:layout_height="112dp"
        android:layout_marginTop="64dp"
        android:height="48dp"
        android:background="@drawable/edittext_border"
        android:hint="@string/event_description_eg_this_event_is_for_computer_science_students"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.274"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input_time" />

    <TextView
        android:id="@+id/title_page"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="sans-serif-black"
        android:gravity="center"
        android:text="Admin Post Event"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textSize="20sp"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="0dp" />

    <Button
        android:id="@+id/scheduleEventButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="8dp"
        android:backgroundTint="#2196F3"
        android:fontFamily="serif"
        android:paddingStart="16dp"
        android:paddingTop="12dp"
        android:paddingEnd="16dp"
        android:paddingBottom="12dp"
        android:text="@string/schedule_event"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textColor="@android:color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        android:typeface="normal"
        android:onClick="postevent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.861"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputdescription"
        app:layout_constraintVertical_bias="0.075" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="serif"
        android:text="@string/name"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        app:layout_constraintBottom_toTopOf="@+id/inputeventname"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.078"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_page"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="serif"
        android:text="@string/participant_limit"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        app:layout_constraintBottom_toTopOf="@+id/inputlimit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.627"
        app:layout_constraintStart_toEndOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/title_page"
        app:layout_constraintVertical_bias="0.95" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:fontFamily="serif"
        android:text="@string/date"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        app:layout_constraintBottom_toTopOf="@+id/input_date"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputeventname"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="117dp"
        android:layout_height="20dp"
        android:fontFamily="serif"
        android:text="@string/time_of_event"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        app:layout_constraintBottom_toTopOf="@+id/input_time"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.636"
        app:layout_constraintStart_toEndOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/inputlimit"
        app:layout_constraintVertical_bias="1.0" />


    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/border"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="serif"
        android:text="@string/description"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        app:layout_constraintBottom_toTopOf="@+id/inputdescription"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.045"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input_date"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/post_back_admin"
        android:layout_width="97dp"
        android:layout_height="50dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="24dp"
        android:backgroundTint="#2196F3"
        android:onClick="posteventback"
        android:text="back"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textColor="@android:color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        android:typeface="normal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputdescription" />

</androidx.constraintlayout.widget.ConstraintLayout>